builder Design Pattern and Fluent Builder Design Pattern (Method Chaining)

--- a/EmployeePortal/Views/Employee/Index.cshtml
+++ b/EmployeePortal/Views/Employee/Index.cshtml
@@ -67,8 +67,15 @@
         <td>
             @Html.DisplayFor(modelItem => item.MedicalAllowance)
         </td>
+        @*<td>
+            
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.ComputerDetails)
+            <label style="font-weight: bold;">@Html.DisplayFor(modelItem => item.SystemConfigurationDetails) </label>
+        </td>
+        <td>
+            @Html.ActionLink("Build System", "BuildSystem", new { employeeID = item.Employee_Id })
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.Employee_Id }) |
